update serps to core

--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
 
   "require": {
     "php": ">=5.5.9",
-    "serps/serps": "*",
+    "serps/core": "*",
     "zendframework/zend-diactoros": ">=1"
   },
 
